--- a/frontendCoinPortfolio/src/components/Transactions/DatePicker.css
+++ b/frontendCoinPortfolio/src/components/Transactions/DatePicker.css
@@ -1,3 +1,15 @@
 .wrapper {
-    background-color: rgb(229, 231, 235);
+    display: block;
+    width: 100%;
+    background-color: rgb(255, 251, 235);
+    appearance: none;
+    line-height: 1.25;
+    border-radius: 0.25rem;
+    border-width: 1px;
+    border-color: rgb(229, 231, 235);;
+}
+.wrapper > div {
+    border-style: none;
+    padding-top: 0.50rem;
+    padding-bottom: 0.50rem;
 }
