organize css and route

--- a/frontendCoinPortfolio/src/index.css
+++ b/frontendCoinPortfolio/src/index.css
@@ -8,3 +8,20 @@ body {
   font-family: Verdana, serif;
   color: rgb(75, 85, 99);   /*text-gray-600 */
 }
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  }
+  @-webkit-keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+  }
+  @keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+  } 
